code25_all/scala/3416856.txt
$ stax deploy

compile:
   [scalac] Compiling 2 source files to /home/gleontiev/workspace/rss2lj/webapp/WEB-INF/classes
error: error while loading FlickrUtils, Scala signature FlickrUtils has wrong version
 expected: 4.1
 found: 5.0
/home/gleontiev/workspace/rss2lj/src/scala/example/snippet/DisplaySnippet.scala:8: error: com.folone.logic.FlickrUtils does not have a constructor
        val dispatcher = new FlickrUtils("8196243@N02")
                         ^
error: error while loading Photo, Scala signature Photo has wrong version
 expected: 4.1
 found: 5.0
/home/gleontiev/workspace/rss2lj/src/scala/example/snippet/DisplaySnippet.scala:9: error: value link is not a member of com.folone.logic.Photo
        val linksGetter = (p:Photo) => p.link
                                         ^
/home/gleontiev/workspace/rss2lj/src/scala/example/snippet/DisplaySnippet.scala:15: error: com.folone.logic.FlickrUtils does not have a constructor
        val dispatcher = new FlickrUtils("8196243@N02")
                         ^
/home/gleontiev/workspace/rss2lj/src/scala/example/snippet/DisplaySnippet.scala:16: error: value medium1 is not a member of com.folone.logic.Photo
        val picsGetter = (p:Photo) => p.medium1
                                        ^
/home/gleontiev/workspace/rss2lj/src/scala/example/snippet/RefreshSnippet.scala:12: error: com.folone.logic.FlickrUtils does not have a constructor
        val dispatcher = new FlickrUtils("8196243@N02")
                         ^
7 errors found
ERROR: : The following error occurred while executing this line:
/home/gleontiev/workspace/rss2lj/build.xml:61: Compile failed with 7 errors; see the compiler error output for details.

class FlickrUtils(val userId : String) {
    //...
}

class Photo (val photoId:String, val userId:String, val secret:String, val server:String) {
    private val _medium1 = "/sizes/m/in/photostream"
    val link = "http://flickr.com/photos/" + userId + "/" + photoId
    val medium1 = link + _medium1
}

$ scala -version
Scala code runner version 2.8.0.final -- Copyright 2002-2010, LAMP/EPFL

scalac
stax deploy
